--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
 body{
-	background: #18e;
+	background: linear-gradient(to right, rgba(200,50,156,.9), rgba(50,60,88,.8), rgba(15,150,60,.8));
 	color: #000;
-	font-width: bolder;
+	font-weight: bolder;
 	font-family: Sans Seriff;
 	border: 1px dashed #fff;
 	margin: 10px 0 5px 0;
+	transition: .02s all;
 }
 
 body:hover{
-	transition: 1s all;
+	transition: .04s all;
 	border:3px solid #323;
-	background: #499
+	background: #18e;
 	}
  
